Update dependencies in pom.xml and modify Customer class for locale handling